Netdisco/share/views/plugin/portinfo/portinfo.css
/* Make space for edit icon on hover */
#dp-data-table .york-port-info[contenteditable]{
  margin-right: 25px;
}

/* Color dirty cells  */
#dp-data-table .nd_portinfo-data-dirty{
  border: 1px solid #000;
  font-style: italic;
}

/* Put nbsp placeholder for editable cells on focus 
   for empty cells because of ff bug */
#dp-data-table .york-port-info[contenteditable]:focus:empty:before {
  content: "\00a0";
}

/* style for edit icon that appears on hover */
.nd_portinfo-edit-icon {
  float: right;
  cursor: pointer;
  /* don't increase the height of the row when hovering
     Problem because of silly firefox bug.. */
  line-height: 80%;
}

/* make Save Port Info button float on the right */
#dp-data-table_submit-port-info {
  float: right;
  margin-right: 10px;
}

/* allow tooltips to work despite datatables plugin 
   positioning for columns */
#dp-data-table_wrapper .DTFC_LeftBodyWrapper,
#dp-data-table_wrapper .DTFC_LeftBodyLiner{
  position: static !important;
}


/* integrate port location search with netdisco */
#nd_location-port-search {
  margin-right: 10px;
}
#nd_location-port-search form {
  margin-bottom: 0;
}

.nd_location-port-search-additional {
  position:absolute;
  left: -5px;
  margin-top: 10px;
  
  padding: 5px;
  border-radius: 5px;
  background-color: rgba(50, 50, 50, 0.7);
}

.nd_location-port-search-additional::before {
  content: "";
  display: inline-block;
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  border-bottom: 7px solid rgba(50, 50, 50, 0.7);
  position: absolute;
  top: -7px;
  left: 9px;
}
.nd_location-port-search-additional input{
  display: block;
  margin-top: 3px;
  margin-bottom: 3px;
  padding-left: 15px;
  padding-right: 15px;
}

/* format the form close button to the left */
.location-port-search-close-btn {
  padding: 3px;
  position: absolute;
  left: -25px;
  top: 5px;
}

